compiler/acton/test/syntaxerrors/err15.act
# Mismatched brackets
def access_item():
    arr = [1, 2, 3]
    return arr[0}